# Discord-Bot

./: .env  .gitignore  helpers.py  keep_alive.py  main.py  pyproject.toml  requirements.txt.rtf
